# proposal-bot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/agents/: __init__.py  analyzer.py  estimator.py  researcher.py  reviewer.py  writer.py
backend/app/crew/: __init__.py  pipeline.py  tasks.py
backend/app/services/: job_store.py  pdf_parser.py
backend/app/utils/: helpers.py
docs/: agent-pipeline.md  api-design.md  architecture.md  assignment.md  poc-proposal.md
front-end/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
front-end/app/: globals.css  layout.js  page.js
front-end/components/: AgentOutputCard.js  Header.js  InputSection.js  ProgressTracker.js  ProposalView.js
front-end/lib/: api.js
sample_docs/: ecommerce_requirements.txt  saas_platform_brief.txt
script/: generate_report.py
