[project]
name = "proposalbot-backend"
version = "1.0.0"
description = "Multi-agent AI system that transforms requirement documents into professional project proposals"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.31.0",
    "python-multipart==0.0.12",
    "pydantic==2.9.0",
    "crewai==0.86.0",
    "crewai-tools==0.17.0",
    "litellm==1.51.0",
    "pdfplumber==0.11.4",
    "python-dotenv==1.0.1",
    "setuptools<81",
]
